Home page ui overflow fix and scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,24 @@ body {
     text-wrap: balance;
   }
 }
+/* Custom Scrollbar */
+@media (min-width: 1024px) {
+
+  .scrollbar-thin::-webkit-scrollbar {
+    width:10px;
+  }
+  
+  .scrollbar-thin::-webkit-scrollbar-thumb {
+    background-color: #888686;
+    border-radius: 10px;
+  }
+  
+  .scrollbar-thin::-webkit-scrollbar-thumb:hover {
+    background-color: #646363;
+  }
+  
+  .scrollbar-thin::-webkit-scrollbar-track {
+    background-color: #f1f1f1; 
+  }
+}
+
